--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -474,6 +474,10 @@ List of classes for the new transaction container
     }
 }
 
+.clip-blocky {
+    clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+}
+
 @keyframes dash {
     0% {
         stroke-dasharray: 1, 150;
