Added search by index

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -76,7 +76,7 @@ div.query-answer {
   }
   
   /* Style the search box inside the navigation bar */
-  .topnav input[type=text] {
+  .topnav input[type=search] {
     display: block;
     padding: 10px;
     border: 2px black;
