Added a click and drag feature to query results

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -37,6 +37,7 @@ div.query-answer {
 #query-card-container {
     overflow: auto;
     outline: 1px solid var(--selected-colour);
+    cursor: grab; 
 }
 
 #query-card-container > .uk-card {
