--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -83,6 +83,12 @@ div.query-answer {
     margin-bottom: 15px;
 }
 
+.transaction-card-header-title{
+    font-weight: 700;
+    margin-top: 5px;
+    color: #666;
+}
+
 .transaction-title{
     font-family: monospace;
     color: #666;
