Fixes in css, mouse events, and added back pointer interractivity to arrows

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -72,7 +72,7 @@ div.query-answer {
     padding-left: 2%;
     font-weight: 700;
     color: #666;
-    font-size: 1.3;
+    font-size: 1.3em;
 }
 
 .block-card-content{
