--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -1,12 +1,19 @@
 @import "~uikit/dist/css/uikit.min.css";
 
+/* */
+:root {
+    --selected-colour: #006fff; //Main colour for displaying the propertiesù
+    --base-colour: #1749b3;
+}
+
 body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    overflow-y: hidden;
+    overflow-y: auto;
+    //overflow-y: hidden;
+    -webkit-appearance: none;
 }
-
 div.block-infos {
     display: flex;
     flex-grow: 0;
@@ -16,7 +23,168 @@ div.block-infos {
     margin-bottom: 36px;
     margin-left: 10;
     margin-right: 10;
-    background-color: #CABEA8;
+    background-color: #ffffff;
+}
+div.query-answer {
+    display: flex;
+    flex-grow: 0;
+    flex-direction: column;
+    margin-top: 0px;
+    padding-top: 10px;
+    margin-bottom: 50px;
+    text-align: center;
+
+    padding: 10px;
+}
+
+#query-card-container {
+    overflow: auto;
+    outline: 1px solid var(--selected-colour);
+    cursor: grab;
+}
+
+#query-card-container > .uk-card {
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+#query-card-container > .uk-card > .uk-card-body {
+    text-align: left;
+}
+
+#query-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 0px;
+}
+
+.block-card-header-details > p{
+    font-family: monospace;
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+#query-header>div{
+    padding-left: 2%;
+    font-weight: 700;
+    color: #666;
+    font-size: 1.3em;
+}
+
+.block-card-content{
+    font-weight: 700;
+    margin-top: 5px;
+    color: #666;
+    font-size: 1.3em;
+    margin-bottom: 15px;
+}
+
+.transaction-card-header-title{
+    font-weight: 700;
+    margin-top: 5px;
+    color: #666;
+}
+
+.transaction-title{
+    font-family: monospace;
+    color: #666;
+    font-size: 1.3em;
+}
+
+/* Used to transform black SVGs to white SVGs, as well as displaying them inline*/
+.white-icon{
+    width: 32px;
+    height: 32px;
+    display : inline-block;
+    position: relative;
+    margin-left : 15px;
+    filter: invert(88%) sepia(67%) saturate(0%) hue-rotate(236deg) brightness(111%) contrast(100%);
+
+
+
+}
+
+.topnav {
+    display: flex;
+    background: #f0eeeece;
+    height: auto;
+    width: auto;
+    -webkit-appearance: none;
+    margin-bottom: 10px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+    color: black;
+}
+
+/* Style the search box inside the navigation bar */
+.topnav input[type="input"] {
+    -webkit-appearance: none;
+    padding: 10px;
+    padding-bottom: 9px;
+    border: 2px black;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    margin-left: 30%;
+    width: 35%;
+    font-size: 14px;
+    font-family: "Roboto", Arial, sans-serif;
+    border-radius: 15px 0 0 15px;
+}
+.topnav a[type="submit"] {
+    padding-top: 10px;
+    background: white;
+    //margin-right: 35%;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    color: grey;
+    border-right: 1px solid grey !important;
+    padding-right: 8px;
+    height: auto;
+    width: auto;
+    border: none;
+    text-shadow: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.topnav > a > svg {
+    padding-bottom: 8px;
+}
+
+.topnav > select {
+    background: white;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    color: grey;
+    border-radius: 0 15px 15px 0;
+    border-color: #f0eeeece;
+    border-left: 1px;
+    height: 35px;
+    width: 200px;
+    border: none;
+    font: 14px arial, sans-serif;
+    text-shadow: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+@media screen and (max-width: 600px) {
+    .topnav a,
+    .topnav input[type="input"] {
+        float: none;
+        display: block;
+        text-align: left;
+        width: 100%;
+        margin: 0;
+        padding: 14px;
+    }
+    .topnav input[type="input"] {
+        border: 1px solid #ccc;
+    }
 }
 
 .block-detail-container {
@@ -29,6 +197,10 @@ div.block-infos {
     overflow-y: scroll;
     padding: 8px;
     flex: 1;
+}
+
+.uk-tooltip {
+    word-wrap: break-word;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -44,18 +216,13 @@ div.block-infos {
 }
 
 #progress-bar-container {
+    align-self: center;
+    flex-direction: row;
     width: 80%;
-    position: absolute;
-    top: 52%;
-    left: 10%;
 }
 
 #progress-bar {
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    bottom: 0%;
-    width: 1%;
+    height: 30px;
     z-index: 1;
     background-color: #4caf50;
 }
@@ -72,29 +239,18 @@ div.block-infos {
 }
 
 .load-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(230, 230, 230);
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    background-color: rgb(255, 255, 255);
     color: black;
+    min-height: 200px;
 }
 
 .div-load {
-    position: absolute;
     top: 30%;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.loader {
-    border: 16px solid #f3f3f3;
-    border-top: 16px solid #3498db;
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
+    align-self: center;
+    align-content: center;
 }
 
 @keyframes spin {
@@ -107,21 +263,64 @@ div.block-infos {
 }
 
 .blocks-container {
+    display: flex;
+    flex-direction: row;
     margin-bottom: 10;
     padding: 0 10px;
+    height: 200px;
+}
+
+#last-container {
+    display: flex;
+    margin-left: 35px;
+    padding-left: 50px;
+    padding-right: 50px;
+    background-color: white;
+    animation: 2s ease-out 2s 1 slideInFromRight;
+    background: white;
+    animation-direction: reverse;
+    overflow: hidden;
+    padding-right: 40px;
+    padding-left: 40px;
+    width: 316.11111px;
+    border-left-color: gray;
+    border-left-width: 1px;
+    border-left-style: solid;
+}
+
+@keyframes slideInFromRight {
+    0% {
+        transform: translateX(0%);
+    }
+    100% {
+        transform: translateX(100%);
+    }
+}
+
+.last-added {
+    left: 0;
 }
 
 #svg-container {
-    display: block;
-    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex: 90%;
+}
+::-webkit-scrollbar {
+    widows: 25px;
+}
+::-webkit-scrollbar-track {
+    border: 7px solid #232943;
+    box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.35);
+}
+
+::-webkit-scrollbar-thumb {
+    background: pink;
+    border-radius: 3px;
 }
 
 .uk-open {
-    background-color: rgb(224, 224, 224);
-}
-
-.uk-accordion-title:focus {
-    color: #333 !important;
+    background-color: #ffffff;
 }
 
 .description {
@@ -132,7 +331,7 @@ div.block-infos {
     transform: translateX(-50%);
 }
 
-.clickable-detail-block>li {
+.clickable-detail-block > li {
     padding: 10px;
 }
 
@@ -173,7 +372,7 @@ div.block-infos {
     color: white;
     font-weight: bold;
     float: right;
-    font-size: 22px;
+    font-size: 20px;
     line-height: 20px;
     cursor: pointer;
     transition: 0.3s;
@@ -184,9 +383,6 @@ div.block-infos {
 }
 
 .cancel-button {
-    position: absolute;
-    top: 80%;
-    right: 10%;
     display: inline-block;
     border: 0.16em solid rgba(255, 255, 255, 0);
     border-radius: 2em;
@@ -195,12 +391,24 @@ div.block-infos {
     text-decoration: none;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
-    font-size: 110%;
+    font-size: 100%;
     color: #ffffff;
     text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
     text-align: center;
     transition: all 0.2s;
     background-color: #0004e2;
+    right: 10%;
+}
+
+#white-icon {
+    filter: invert(100%) sepia(8%) saturate(2%) hue-rotate(87deg)
+        brightness(115%) contrast(100%);
+}
+
+.spinner {
+    margin: 0 auto;
+    align-self: center;
+    display: flex;
 }
 
 .cancel-button:hover {
@@ -214,14 +422,26 @@ div.block-infos {
     }
 }
 
-.logo {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    top: 10%;
-    content: url(https://avatars2.githubusercontent.com/u/3638331?s=200&v=4);
+.uk-select {
+    width: 60%;
 }
 
+#button-browse {
+    padding: 8px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 60%;
+    border-width: 2px;
+}
+
+.logo {
+    content: url(https://avatars2.githubusercontent.com/u/3638331?s=200&v=4);
+    display: table;
+    margin: 0 auto;
+    width: 80px;
+    height: 80px;
+}
 
 /*
 footer from status.dedis.ch
@@ -238,69 +458,129 @@ footer {
     text-align: center;
 }
 
-
 /*
 List of classes for the new transaction container
 */
 
+#block-detail-container {
+    outline: 2px solid var(--selected-colour);
+}
+
+// #block-detail-field {
+//     font-family: "Space Mono", monospace;
+//     color: #ffffff;
+// }
+.uk-accordion > .uk-open {
+    background-color: var(--selected-colour);
+}
+
+.uk-accordion-title:focus {
+    color: #ffffff;
+}
+
+.uk-accordion-title::before {
+    background-color: white;
+}
+
+.uk-accordion {
+    font-family: "Space Mono", monospace;
+    background-color: var(--selected-colour);
+    padding: 8px;
+}
+
+.uk-accordion * {
+    color: #ffffff;
+}
+
+.uk-accordion-content{
+    padding-left: 15px;
+}
+
+.uk-accordion-content > p {
+    margin-left: 10px;
+}
+
+#rejected {
+    color: red;
+}
+
+#forwardlink-drop {
+    background-color: var(--base-colour);
+    max-width: 80%;
+}
+
 .active {
-    background-color: rgb(160, 160, 160);
+    background-color: rgb(255, 255, 255);
 }
 
 .block-detail-container p {
-    color: black;
-    font-size: 17px;
+    font-size: 16px;
+    overflow: auto;
 }
 
 .browse-container p {
-    color: black;
-    font-size: 17px;
+    font-size: 16px;
 }
 
 .spinner {
     animation: rotate 2s linear infinite;
     transform-origin: 50%;
-  }
+}
 
- .spinner circle {
+.spinner circle {
     stroke: rgb(140, 182, 224);
     stroke-linecap: round;
     animation: dash 1.5s ease-in-out infinite;
-  }
-  
-  @keyframes rotate {
+}
+
+@keyframes rotate {
     100% {
-      transform: rotate(360deg);
+        transform: rotate(360deg);
     }
-  }
-  
-  @keyframes dash {
+}
+
+.clip-blocky {
+    clip-path: polygon(
+        20% 0%,
+        80% 0%,
+        100% 20%,
+        100% 80%,
+        80% 100%,
+        20% 100%,
+        0% 80%,
+        0% 20%
+    );
+}
+
+@keyframes dash {
     0% {
-      stroke-dasharray: 1, 150;
-      stroke-dashoffset: 0;
+        stroke-dasharray: 1, 150;
+        stroke-dashoffset: 0;
     }
     50% {
-      stroke-dasharray: 90, 150;
-      stroke-dashoffset: -35;
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -35;
     }
     100% {
-      stroke-dasharray: 90, 150;
-      stroke-dashoffset: -124;
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -124;
     }
-  }
+}
 
-  .header {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0 20px;
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 0px;
 
-      h1 {
-          color: #264473;
-      }
+    img {
+        color: #264473;
+        max-width: none;
+        height: 70;
+    }
 
-      #status-info {
+    #status-info {
         .info {
             display: flex;
             flex-direction: row;
@@ -312,26 +592,26 @@ List of classes for the new transaction container
                 height: 50px;
                 position: relative;
             }
-  
+
             .info-message {
                 padding: 20px;
             }
         }
+    }
+}
 
-      }
-  }
+.x-axis {
+    text-anchor: start;
 
-.x-axis{
-
-    line{
-        stroke: #8C764A;
+    line {
+        stroke: #8c764a;
     }
 
-    path{
-        stroke: #8C764A;
+    path {
+        stroke: #8c764a;
     }
-    
-    text{
-        fill: #8C764A;
-    } 
+
+    text {
+        fill: #8c764a;
+    }
 }
