install introJs + start tuto

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -2,7 +2,7 @@
 
 /* */
 :root {
-    --selected-colour: #006fff; //Main colour for displaying the propertiesù
+    --selected-colour: #006fff; //Main colour for displaying the properties
     --base-colour: #1749b3;
 }
 
