--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -102,8 +102,6 @@ div.query-answer {
     margin-left : 15px;
     filter: invert(88%) sepia(67%) saturate(0%) hue-rotate(236deg) brightness(111%) contrast(100%);
 
-
-
 }
 
 .topnav {
@@ -192,6 +190,17 @@ div.query-answer {
     padding: 8px;
     flex: 1;
 }
+
+/*
+.tutorial-icon{
+    width: 20px;
+    height: 20px;
+    display : inline-block;
+    position: relative;
+    filter: invert(88%) sepia(67%) saturate(0%) hue-rotate(236deg) brightness(111%) contrast(100%);
+
+}
+*/
 
 .browse-container {
     overflow-y: scroll;
