--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -1,4 +1,6 @@
 @import "~uikit/dist/css/uikit.min.css";
+@import "~intro.js/minified/introjs.min.css";
+@import "~intro.js/themes/introjs-modern.css";
 
 /* */
 :root {
