--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -339,10 +339,73 @@ div.query-answer {
     left: 0;
 }
 
+div #div-blocks-wrapper {
+    position: relative;
+    width: 842.283px;
+    height: 100%;
+    overflow:auto;
+}
+
+//zoom-in & out button
+.dropdown {
+    position:relative;
+    left: -975px;
+    top:15px;
+    width: 30px;
+    height: 30px;
+    
+}
+.zoombtn {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color:white;
+    border: none;
+    cursor: pointer;
+}
+.zoombtn:hover,
+.zoombtn:focus {
+    background-color:#ccc;
+}
+
+#svg-zoombtn {
+    width: 30px;
+    height: 30px;
+    max-width:none;
+
+}
+.dropdown-zoom{
+    position:relative;
+    display:inline-block;
+}
+
+.dropdown-zoom-content {
+    display:none;
+    position: absolute;
+    top: 30px;
+    left: 10px;
+    background-color: #ffffff;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    cursor: pointer;
+}
+
+.dropdown-zoom-content p {
+    display: block;
+    font-size: small;
+}
+
+.dropdown-zoom-content p:hover {
+    background-color:#ccc;
+}
+
+.show {display: block;}
+
 #svg-container {
     display: flex;
     flex-direction: row;
-    flex: 90%;
+    width: 100%;
+
 }
 ::-webkit-scrollbar {
     widows: 25px;
