--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -701,10 +701,12 @@ List of classes for the new transaction container
 
             .info-message {
                 padding: 20px;
+                font-size: small;
             }
         }
     }
 }
+
 
 .x-axis {
     text-anchor: start;
