scroll bar commented and roster functionality bug

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -408,6 +408,7 @@ div.query-answer {
 #svg-container {
     display: flex;
     flex-direction: row;
+    width:100%;
     //width: 1100px; //addition was 100% before
     max-width:none; //addition
 
