--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -42,7 +42,8 @@ div.query-answer {
 #query-card-container {
     overflow: auto;
     outline: 1px solid var(--selected-colour);
-    cursor: grab;
+    //cursor: grab;
+    padding:0 10px;
 }
 
 #query-card-container > .uk-card {
@@ -98,7 +99,7 @@ div.query-answer {
 
 //code added: change the download icon color on hover
 .download-icon-1{
-    //display:inline-block;
+    display:inline-block;
     padding-left: 2px;
     float: right;
     svg{
@@ -106,7 +107,7 @@ div.query-answer {
         height: 30px;
         cursor: default;
         path{
-            stroke: black;
+            stroke: #666;
         }
 
         &:hover path{
@@ -117,15 +118,14 @@ div.query-answer {
 }
 
 .download-icon-2{
-    //display:inline-block;
-    padding-left: 4px;
-    float: right;
+    display:inline-block;
+    padding-left: 400;
     svg{
         width:25px;
         height: 25px;
         cursor: default;
         path{
-            stroke: black;
+            stroke: #666;
         }
 
         &:hover path{
@@ -446,7 +446,7 @@ div.query-answer {
     text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
     text-align: center;
     transition: all 0.2s;
-    background-color: #0004e2;
+    background-color: #1749b3; //"#1749b3"
     right: 10%;
 }
 
@@ -595,6 +595,7 @@ List of classes for the new transaction container
     animation: dash 1.5s ease-in-out infinite;
 }
 
+
 @keyframes rotate {
     100% {
         transform: rotate(360deg);
@@ -677,3 +678,30 @@ List of classes for the new transaction container
         fill: #8c764a;
     }
 }
+
+
+#svg-spinner{
+    -webkit-transition-property: -webkit-transform;
+    -webkit-transition-duration: 1.2s;
+    -webkit-animation-name: rotate;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    
+    -moz-transition-property: -moz-transform;
+    -moz-animation-name: rotate; 
+    -moz-animation-duration: 1.2s; 
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+    
+    transition-property: transform;
+    animation-name: rotate; 
+    animation-duration: 1.2s; 
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+  
+  @keyframes rotate {
+      from {transform: rotate(0deg);}
+      to {transform: rotate(360deg);}
+  }
+  
