roster button and delete outdated files

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -778,6 +778,10 @@ List of classes for the new transaction container
     background:rgba(0,0,0,0.5); //darken background to overwrite .uk-open background-color 
 }
 
+.uk-button-small {
+    width: 110px;
+}
+
 
 .x-axis {
     text-anchor: start;
